# eink-10

./: .dockerignore  .gitignore
.github/workflows/: build.yml
deploy/: README.md
deploy/k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.example.yaml  service.yaml
diary/: 2026-04-27.md  2026-04-28.md
docs/: renderer-spec.md
firmware/: platformio.ini
firmware/include/: secrets.example.h
firmware/src/: main.cpp
server/: .dockerignore  .env.local.example  Dockerfile  pyproject.toml
server/diary/: 2026-04-27.md  2026-04-28.md
server/src/eink_server/: main.py  push_cli.py  quantize.py  storage.py
